--- a/Pizza.API/appsettings.json
+++ b/Pizza.API/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Consul": {
+        "Host": "consul",
+        "Discovery": {
+            "ServiceName": "pizza-service",
+            "Hostname": "pizza.api",
+            "Port": 8080
+        }
     }
-  },
-  "AllowedHosts": "*"
 }
