--- a/ApiGateway/Properties/launchSettings.json
+++ b/ApiGateway/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5117"
+      "applicationUrl": "http://localhost:5009"
     },
     "https": {
       "commandName": "Project",
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7093;http://localhost:5117"
+      "applicationUrl": "https://localhost:7088;http://localhost:5009"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -28,6 +28,7 @@
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
+      "launchBrowser": false,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
@@ -42,8 +43,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:27933",
-      "sslPort": 44314
+      "applicationUrl": "http://localhost:16609",
+      "sslPort": 44343
     }
   }
 }
